Word wrapping, auto closing brackets, general UX issues

--- a/src/Toolbar/toolbar.css
+++ b/src/Toolbar/toolbar.css
@@ -8,6 +8,10 @@
   height: var(--toolbar-height);
 }
 
+.main-editor {
+  width: 100%;
+}
+
 .toolbar-button {
   display: flex;
   align-items: center;
@@ -150,10 +154,15 @@
   display: inline-block; /* Ensures inline behavior */
 }
 
-/* #ai-widget path {
-  d: M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z;
-} */
-
 #fileInput {
   display: none;
+}
+
+.CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
+  position: revert !important;
+}
+
+.CodeMirror-selected {
+  background: #ff9f8a !important;
+  opacity: 0.4;
 }
